<resources>
    <string name="app_name">ProjectGroup5</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Events</string>
    <string name="userAccount">Account</string>
    <string name="Login">Login</string>
    <string name="CreateAccount">Create an Account</string>
    <string name="organizer">Organizer</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="organisation">Organisation</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pending_list">Pending List</string>
    <string name="rejected_list">Rejected List</string>
    <string name="accepted_list">Accepted List</string>
    <string name="you_are_not_registered">You are not registered</string>
    <string name="pick_end_time">Pick end time</string>
    <string name="pick_start_time">Pick start time</string>
    <string name="SignUp">Sign Up</string>
    <string-array name="event_type_for_organizer">
        <item>Upcoming</item>
        <item>Past</item>
        <item>Current</item>
    </string-array>
    <string-array name="user_registration_status">
        <item>Registered</item>
        <item>Waitlisted</item>
        <item>Rejected</item>
    </string-array>
</resources>