<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projectgroup5.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/search_event_dashboard"
        android:name="com.example.projectgroup5.ui.search.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/account_managment"
        android:name="com.example.projectgroup5.ui.account.AccountFragment"
        android:label="@string/userAccount"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/login"
        android:name="com.example.projectgroup5.ui.account.LoginFragment"
        android:label="@string/userAccount"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/login_or_create_account"
        android:name="com.example.projectgroup5.ui.account.LoginOrCreate"
        android:label="@string/userAccount"
        tools:layout="@layout/login_or_create_account_fragment" />

    <fragment
        android:id="@+id/create_account"
        android:name="com.example.projectgroup5.ui.account.CreateAccountFragment"
        android:label="@string/userAccount"
        tools:layout="@layout/fragment_create_account" />

</navigation>