<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:padding="16dp">

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Pending List Button -->
        <Button
            android:id="@+id/pendingListButton"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_with_shadow"
            android:elevation="8dp"
            android:padding="12dp"
            android:text="@string/pending_list"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Rejected List Button -->
        <Button
            android:id="@+id/rejectedListButton"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_with_shadow"
            android:elevation="8dp"
            android:padding="12dp"
            android:text="@string/rejected_list"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Accepted List Button -->
        <Button
            android:id="@+id/acceptedListButton"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_with_shadow"
            android:elevation="8dp"
            android:padding="12dp"
            android:text="@string/accepted_list"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
