<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.LoginFragment"
    android:background="@color/gray_background">

    <!-- Title -->
    <TextView
        android:id="@+id/createEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Event"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <!-- Form Container -->
    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/createEventTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <!-- Event Title Input -->
        <EditText
            android:id="@+id/eventTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_input_with_border"
            android:hint="Event Title"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral30"
            android:textSize="16sp" />

        <!-- Event Description -->
        <EditText
            android:id="@+id/eventDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rectangular_input_with_border"
            android:hint="Description"
            android:padding="16dp"
            android:gravity="top"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral30"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <!-- Event Address -->
        <EditText
            android:id="@+id/eventAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_input_with_border"
            android:hint="Address"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral30"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <!-- Auto Accept Switch -->
        <Switch
            android:id="@+id/autoAcceptSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Auto Accept"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Pick Start Time Button -->
        <Button
            android:id="@+id/pickStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_start_time"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_with_shadow"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Pick End Time Button -->
        <Button
            android:id="@+id/pickEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_end_time"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_with_shadow"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Buttons for Cancel and Create -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <!-- Cancel Button -->
            <Button
                android:id="@+id/cancelEventCreateButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_button_with_shadow"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Create Button -->
            <Button
                android:id="@+id/createEventCreateButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_button_with_shadow"
                android:text="@string/create"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
